<resources>
    <string name="app_name">ParkingApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_logout">Logout</string>

    <string name="parking_list">Parking List</string>
    <string name="parking_add">Add Parking</string>
    <string name="update_profile">Update Profile</string>

    <string name="email">Email</string>
    <string name="passowrd">Passowrd</string>
    <string name="save_password">Save Password</string>
    <string name="login_btn">LOGIN</string>
    <string name="sign_up">Sign Up</string>

    <string name="hour_prompt">Choose Parking Hours</string>
    <string name="password">Password</string>
    <string-array name="hours_arrays">
        <item>1-hour or less</item>
        <item>4-hour</item>
        <item>12-hour</item>
        <item>24-hour</item>
    </string-array>
    <string name="title_activity_maps">Map</string>
    <string name="enter_car_plate_no">Enter Car Plate No</string>
    <string name="enter_building_code">Enter Building Code</string>
    <string name="how_many_hours_do_you_want_to_park">How many hours do you want to park?</string>
    <string name="enter_no_of_host">Enter No of Host</string>
    <string name="parking_address">Parking Address</string>
    <string name="enter_parking_address">Enter Parking Address</string>
    <string name="or">OR</string>
    <string name="building_code">Building Code : </string>
    <string name="parking_date">Parking Date : </string>
    <string name="suit_no_of_host">Suit No of Host : </string>
    <string name="view_your_parking_location">View your Parking Location</string>
    <!--    <string name="you_don_t_have_any_parking_booked_yet">You don&apos;t have any parking booked yet.</string>-->
    <string name="add_parking">Add Parking</string>
    <string name="use_current_location">Use Current Location</string>

</resources>