<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.parkingapp.fragment.HomeFragment"
        android:label="@string/parking_list"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_add_parking"
        android:name="com.example.parkingapp.fragment.AddParkingFragment"
        android:label="@string/parking_add"
        tools:layout="@layout/fragment_add_parking" />

    <fragment
        android:id="@+id/nav_updateProfile"
        android:name="com.example.parkingapp.fragment.UpdateProfileFragment"
        android:label="@string/update_profile"
        tools:layout="@layout/fragment_update_profile" />
</navigation>