<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/ed_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:drawableLeft="@android:drawable/sym_action_email"
            android:background="@drawable/edittext"
            android:textColorHint="@color/white"
            android:drawablePadding="10dp"
            android:layout_marginTop="15dp"
            android:inputType="textEmailAddress"
            android:hint="@string/email"
            android:drawableTint="@color/white"
            android:padding="6dp"
            android:singleLine="true"
            android:textSize="16sp" />


        <EditText
            android:id="@+id/ed_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:drawableLeft="@android:drawable/ic_partial_secure"
            android:drawableTint="@color/white"
            android:background="@drawable/edittext"
            android:textColorHint="@color/white"
            android:drawablePadding="10dp"
            android:layout_marginTop="15dp"
            android:hint="@string/email"
            android:inputType="textPassword"
            android:padding="10dp"
            android:singleLine="true"
            android:textSize="16sp" />

        <CheckBox
            android:id="@+id/remember_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save_password"
            android:textAlignment="viewStart"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:layout_marginTop="10dp"
            android:textStyle="bold" />


        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:fontFamily="serif"
            android:padding="3dp"
            android:text="@string/login_btn"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvCreateAcc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:textSize="18sp"
            android:text="Create an Account"
            android:textColor="@color/black"></TextView>

        <ProgressBar
            android:id="@+id/progressBar"
            android:visibility="gone"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="true" />

    </LinearLayout>
</LinearLayout>
